fix: set overflow hidden to render provider element div to prevent lateral scroll

--- a/styles/sass/partials/header/vtex.minicart.scss
+++ b/styles/sass/partials/header/vtex.minicart.scss
@@ -169,11 +169,6 @@
   }
 }
 
-.drawerContent {
-  overflow: hidden !important;
-}
-
-
 
 .minicartCheckoutButton {
   margin: 0;
